--- a/index.html
+++ b/index.html
@@ -45,22 +45,35 @@
       <h1>FEATURED PRODUCTS</h1>
       <div class="product-container">
         <div>
-          <img src="images/footer1_334x370.png" alt="EMBROIDERY STABILIZER" />
+          <div class="fake">
+            <img src="images/footer1_334x370.png" alt="EMBROIDERY STABILIZER" />
+          </div>
           <p>EMBROIDERY STABILIZER</p>
         </div>
         <div>
-          <img src="images/footer2_319x354.png" alt="CUBBIE GREY ELEPHANT" />
+          <div class="fake">
+            <img src="images/footer2_319x354.png" alt="CUBBIE GREY ELEPHANT" />
+          </div>
           <p>CUBBIE GREY ELEPHANT</p>
         </div>
         <div>
-          <img
-            src="images/footer3_4_356x395.png"
-            alt="KIMBERBELL CUP OF CHEER"
-          />
+          <div class="fake">
+            <img
+              src="images/footer3_4_356x395.png"
+              alt="KIMBERBELL CUP OF CHEER"
+            />
+          </div>
+
           <p>KIMBERBELL CUP OF CHEER</p>
         </div>
         <div>
-          <img src="images/footer3_4_356x395.png" alt="KIMBERBELL TWO SCOOPS" />
+          <div class="fake">
+            <img
+              src="images/footer3_4_356x395.png"
+              alt="KIMBERBELL TWO SCOOPS"
+            />
+          </div>
+
           <p>KIMBERBELL TWO SCOOPS</p>
         </div>
       </div>
