class name change

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       <h1>FEATURED PRODUCTS</h1>
       <div class="product-container">
         <div>
-          <div class="fake">
+          <div class="footer-image">
             <img src="images/footer1_334x370.png" alt="EMBROIDERY STABILIZER" />
           </div>
           <p>EMBROIDERY STABILIZER</p>
         </div>
         <div>
-          <div class="fake">
+          <div class="footer-image">
             <img src="images/footer2_319x354.png" alt="CUBBIE GREY ELEPHANT" />
           </div>
           <p>CUBBIE GREY ELEPHANT</p>
         </div>
         <div>
-          <div class="fake">
+          <div class="footer-image">
             <img
               src="images/footer3_4_356x395.png"
               alt="KIMBERBELL CUP OF CHEER"
@@ -67,7 +67,7 @@
           <p>KIMBERBELL CUP OF CHEER</p>
         </div>
         <div>
-          <div class="fake">
+          <div class="footer-image">
             <img
               src="images/footer3_4_356x395.png"
               alt="KIMBERBELL TWO SCOOPS"
